# github-health-checker

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  render.yaml  requirements.txt
app/: __init__.py  main.py  models.py
app/services/: __init__.py  ai.py  github.py  grading.py
app/static/: index.html
tests/: test_ai.py  test_api.py  test_github.py  test_grading.py
